# QtPractice

./: .gitmodules  CMakeLists.txt
Practice/: CMakeLists.txt
Practice/files/: MyResources.qrc
Practice/src/: main.cpp  pch.h
Practice/src/MainWindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Practice/src/MyWidget/: MyFirstWidget.cpp  MyFirstWidget.h  MyFirstWidget.ui  MySecondWidget.cpp  MySecondWidget.h
Practice/src/Thread/: MyFirstThread.cpp  MyFirstThread.h
Practice/src/ex10/: Splitters.cpp  Splitters.h  Splitters.ui
Practice/src/ex23/: ex23.ui  menubar.cpp  menubar.h  menubar.ui
Practice/src/ex24/: ProgressBar.cpp  ProgressBar.h  ProgressBar.ui
Practice/src/ex25/: StatusBar.cpp  StatusBar.h  StatusBar.ui
Practice/src/ex26/: MessageBox.cpp  MessageBox.h  MessageBox.ui
